added facebook auth and name retrieval

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     implementation 'org.parceler:parceler-api:1.1.12'
     annotationProcessor 'org.parceler:parceler:1.1.12'
     implementation 'com.google.android.libraries.places:places:2.3.0'
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
 
 }
